#16 - 게시판 페이지에 decoupled logic 적용
이것으로 타임리프 문법을 html 마크업 페이지에서 분리한다.

--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko"  xmlns:th="http://www.thymeleaf.org">
+<html lang="ko"  >
 <head>
     <meta charset="UTF-8">
     <title>게시판 페이지</title>
@@ -8,7 +8,7 @@
 
 <body>
 
-   <header th:replace="header :: header"></header>
+   <header> </header>
 
    <main>
        <label for="search-type" hidden>유형</label>
@@ -85,7 +85,7 @@
 
 <hr>
 
-  <footer th:replace="footer :: footer"></footer>
+  <footer></footer>
 
 
 </body>
