#16 - 헤더, 푸터에 부트스트랩 예제 적용

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -5,9 +5,13 @@
     <title>Footer template</title>
 </head>
 <body>
-<footer>
-  footer 삽입부2
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <p class="col-md-4 mb-0 text-muted">&copy; 2023 Company, Inc</p>
 
+    <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+
+    </ul>
 </footer>
 </body>
 </html>
