--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -1,79 +1,127 @@
 <!DOCTYPE html>
-<html lang="ko"  >
+<html lang="ko" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
-  <title>게시판 페이지</title>
+
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Qnfzk">
+    <title>게시판 페이지</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="/static.css/search-bar.css" rel="stylesheet">
 </head>
 
 
 <body>
 
-<header id="header">  </header>
+<header class="p-3 text-bg-dark">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="/" class="nav-link px-2 text-secondary">Home</a> </li>
+            </ul>
 
-<main>
- <header>
+            <div class="text-end">
+                <button type="button" class="btn btn-outline-light me-2">Login</button>
+                <button type="button" class="btn btn-warning">Sign-up</button>
+            </div>
+        </div>
+    </div>
+</header>
+
+<main class="container">
+ <header class="py-5 text-center">
    <h1>첫번째 글</h1>
  </header>
 
+
+   <div class="row g-5">
+   <section class="col-md-5 col-lg-4 order-md-last">
     <aside>
-       <p>Qnfzksla</p>
-        <p><a href="mailto:qnfzk123@gmail.com"></a> </p>
+       <p><span class="nick-name">Qnfzksla</span> </p>
+        <p><a class="u-url" rel="me" href="mailto:qnfzk123@gmail.com">qnfzk123@gmail.com</a> </p>
         <p><time datetime="2023-01-01T00:00:00">2023-01-01</time> </p>
         <p>#java</p>
     </aside>
+       </section>
 
-    <section>
+    <article class="col-md-7 col-lg-8">
         <p>본문<br><br></p>
+       </article>
 
-        <div>
-
-            <form>
-                <label for="articleComment" hidden>댓글</label>
-                <textarea id="articleComment" placeholder="댓글 쓰기.." rows="3"></textarea>
-                <button type="submit">쓰기</button>
-            </form>
-
-            <ul>
-              <li>
+   </div>
+ <div class="row g-5">
+     <section>
+         <form class="row g-3>">
+             <div class="col-8">
+                 <label for="comment-textbox" hidden>댓글</label>
+                 <textarea class="form-control" id="comment-textbox" placeholder="댓글 쓰기..." rows="3"></textarea>
+             </div>
+             <div class="col-auto">
+                 <label for="comment-submit" hidden>댓글 쓰기</label>
+                 <button class="btn btn-primary" id="comment-submit" type="submit">쓰기</button>
+             </div>
+         </form>
+         <ul>
+             <li>
                 <div>
                     <time><small>2023-01-01</small></time>
-                    <strong>Qnfzksla</strong>
+                    <strong>Uno</strong>
                     <p>
-                       Lorem ipsum dolor sit amet, consectetur
+                        Lorem ipsim dolor sit amet, consectetur adipiscing elit.<br>
                         Lorem ipsum dolor sit amet
-
                     </p>
                 </div>
+             </li>
+             <li>
+                 <div>
+                     <time><small>2023-01-01</small></time>
+                     <strong>Uno</strong>
+                     <p>
+                         Lorem ipsim dolor sit amet, consectetur adipiscing elit.<br>
+                         Lorem ipsum dolor sit amet
+                     </p>
+                 </div>
+             </li>
+         </ul>
 
-              </li>
+     </section>
 
-                <li>
-                    <div>
-                        <time><small>2023-01-01</small></time>
-                        <strong>Qnfzksla</strong>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur
-                            Lorem ipsum dolor sit amet
+ </div>
 
-                        </p>
-                    </div>
-
+    <div class="row g-5">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo; prev</span>
+                    </a>
                 </li>
-
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">next &raquo;</span>
+                    </a>
+                </li>
             </ul>
-
-        </div>
-
-        <nav>
-            <a href="#"> 이전 글</a>
-            <a href="#"> 다음 글</a>
         </nav>
-    </section>
+    </div>
 </main>
 
 
 
-<footer id="footer"></footer>
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <p class="col-md-4 mb-0 text-muted">&copy; 2023 Company, Inc</p>
+
+    <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+
+    </ul>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 
 </body>
