--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -2,43 +2,85 @@
 <html lang="ko"  >
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Qnfzk">
     <title>게시판 페이지</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="/static.css/search-bar.css" rel="stylesheet">
+    <style>
+
+    </style>
+
 </head>
 
 
 <body>
 
-   <header> </header>
+<header class="p-3 text-bg-dark">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="/" class="nav-link px-2 text-secondary">Home</a> </li>
+            </ul>
 
-   <main>
-       <label for="search-type" hidden>유형</label>
-
-       <select id="search-type" name="search-type">
-           <option>제목</option>
-           <option>본문</option>
-           <option>ID</option>
-           <option>닉네임</option>
-           <option>해시태그</option>
-
-       </select>
-       <label for="search-value" hidden> 검색어 </label>
-           <input id="search-value" type="search" placeholder="검색어..." name="search-value">
-           <button type="submit">검색</button>
+            <div class="text-end">
+                <button type="button" class="btn btn-outline-light me-2">Login</button>
+                <button type="button" class="btn btn-warning">Sign-up</button>
+            </div>
+        </div>
+    </div>
+</header>
 
 
+   <main class="container">
+
+       <div class="row">
+           <div class="col-lg-12 card-margin">
+               <div class="card search-form">
+                   <div class="card-body p-0">
+                       <form id="search-form">
+                           <div class="row">
+                               <div class="col-12">
+                                   <div class="row no-gutters">
+                                       <div class="col-lg-3 col-md-3 col-sm-12 p-0">
+                                           <select class="form-control" id="exampleFormControlSelect1">
+                                               <option>제목</option>
+                                               <option>본문</option>
+                                               <option>id</option>
+                                               <option>닉네임</option>
+                                               <option>해시태그 </option>
+                                           </select>
+                                       </div>
+                                       <div class="col-lg-8 col-md-6 col-sm-12 p-0">
+                                           <input type="text" placeholder="Search..." class="form-control" id="search" name="search">
+                                       </div>
+                                       <div class="col-lg-1 col-md-3 col-sm-12 p-0">
+                                           <button type="submit" class="btn btn-base">
+                                               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+                                           </button>
+                                       </div>
+                                   </div>
+                               </div>
+                           </div>
+                       </form>
+                   </div>
+               </div>
+           </div>
+       </div>
 
 
-       </form>
 
 
-       <table>
+       <table class="table">
 
            <thead>
            <tr>
-               <th>제목</th>
-               <th>해시태그</th>
-               <th>작성자</th>
-               <th>작성일</th>
+               <th class="col-6">제목</th>
+               <th class="col-2">해시태그</th>
+               <th class="col">작성자</th>
+               <th class="col">작성일</th>
            </tr>
            </thead>
            <tbody>
@@ -68,24 +110,29 @@
 
        </table>
 
-           <nav>
-              <table>
-                  <tr>
-                      <td>previous</td>
-                      <td>1</td>
-                      <td>2</td>
-                      <td>3</td>
-                      <td>4</td>
-                      <td>Next</td>
-                  </tr>
-              </table>
-
-           </nav>
+       <nav aria-label="Page navigation example">
+           <ul class="pagination justify-content-center">
+               <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+               <li class="page-item"><a class="page-link" href="#">1</a></li>
+               <li class="page-item"><a class="page-link" href="#">2</a></li>
+               <li class="page-item"><a class="page-link" href="#">3</a></li>
+               <li class="page-item"><a class="page-link" href="#">Next</a></li>
+           </ul>
+       </nav>
    </main>
 
 <hr>
 
-  <footer></footer>
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <p class="col-md-4 mb-0 text-muted">&copy; 2023 Company, Inc</p>
+
+    <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+
+    </ul>
+</footer>
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 
 </body>
