--- a/src/main/resources/static.css/search-bar.css
+++ b/src/main/resources/static.css/search-bar.css
@@ -1,126 +1,4 @@
-body{
-    background:#dcdcdc;
-    margin-top:20px;}
-
-.widget-26 {
-    color: #3c4142;
-    font-weight: 400;
-}
-
-.widget-26 tr:first-child td {
-    border: 0;
-}
-
-.widget-26 .widget-26-job-emp-img img {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-}
-
-.widget-26 .widget-26-job-title {
-    min-width: 200px;
-}
-
-.widget-26 .widget-26-job-title a {
-    font-weight: 400;
-    font-size: 0.875rem;
-    color: #3c4142;
-    line-height: 1.5;
-}
-
-.widget-26 .widget-26-job-title a:hover {
-    color: #68CBD7;
-    text-decoration: none;
-}
-
-.widget-26 .widget-26-job-title .employer-name {
-    margin: 0;
-    line-height: 1.5;
-    font-weight: 400;
-    color: #3c4142;
-    font-size: 0.8125rem;
-    color: #3c4142;
-}
-
-.widget-26 .widget-26-job-title .employer-name:hover {
-    color: #68CBD7;
-    text-decoration: none;
-}
-
-.widget-26 .widget-26-job-title .time {
-    font-size: 12px;
-    font-weight: 400;
-}
-
-.widget-26 .widget-26-job-info {
-    min-width: 100px;
-    font-weight: 400;
-}
-
-.widget-26 .widget-26-job-info p {
-    line-height: 1.5;
-    color: #3c4142;
-    font-size: 0.8125rem;
-}
-
-.widget-26 .widget-26-job-info .location {
-    color: #3c4142;
-}
-
-.widget-26 .widget-26-job-salary {
-    min-width: 70px;
-    font-weight: 400;
-    color: #3c4142;
-    font-size: 0.8125rem;
-}
-
-.widget-26 .widget-26-job-category {
-    padding: .5rem;
-    display: inline-flex;
-    white-space: nowrap;
-    border-radius: 15px;
-}
-
-.widget-26 .widget-26-job-category .indicator {
-    width: 13px;
-    height: 13px;
-    margin-right: .5rem;
-    float: left;
-    border-radius: 50%;
-}
-
-.widget-26 .widget-26-job-category span {
-    font-size: 0.8125rem;
-    color: #3c4142;
-    font-weight: 600;
-}
-
-.widget-26 .widget-26-job-starred svg {
-    width: 20px;
-    height: 20px;
-    color: #fd8b2c;
-}
-
-.widget-26 .widget-26-job-starred svg.starred {
-    fill: #fd8b2c;
-}
-.bg-soft-base {
-    background-color: #e1f5f7;
-}
-.bg-soft-warning {
-    background-color: #fff4e1;
-}
-.bg-soft-success {
-    background-color: #d1f6f2;
-}
-.bg-soft-danger {
-    background-color: #fedce0;
-}
-.bg-soft-info {
-    background-color: #d7efff;
-}
-
-
+/* 검색창 */
 .search-form {
     width: 80%;
     margin: 0 auto;
@@ -161,79 +39,17 @@ body{
     height: 24px;
 }
 
-.search-body {
-    margin-bottom: 1.5rem;
-}
-
-.search-body .search-filters .filter-list {
-    margin-bottom: 1.3rem;
-}
-
-.search-body .search-filters .filter-list .title {
-    color: #3c4142;
-    margin-bottom: 1rem;
-}
-
-.search-body .search-filters .filter-list .filter-text {
-    color: #727686;
-}
-
-.search-body .search-result .result-header {
-    margin-bottom: 2rem;
-}
-
-.search-body .search-result .result-header .records {
-    color: #3c4142;
-}
-
-.search-body .search-result .result-header .result-actions {
-    text-align: right;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.search-body .search-result .result-header .result-actions .result-sorting {
-    display: flex;
-    align-items: center;
-}
-
-.search-body .search-result .result-header .result-actions .result-sorting span {
-    flex-shrink: 0;
-    font-size: 0.8125rem;
-}
-
-.search-body .search-result .result-header .result-actions .result-sorting select {
-    color: #68CBD7;
-}
-
-.search-body .search-result .result-header .result-actions .result-sorting select option {
-    color: #3c4142;
-}
-
-@media (min-width: 768px) and (max-width: 991.98px) {
-    .search-body .search-filters {
-        display: flex;
-    }
-    .search-body .search-filters .filter-list {
-        margin-right: 1rem;
-    }
-}
-
 .card-margin {
     margin-bottom: 1.875rem;
 }
 
-@media (min-width: 992px){
+@media (min-width: 992px) {
     .col-lg-2 {
         flex: 0 0 16.66667%;
         max-width: 16.66667%;
     }
 }
 
-.card-margin {
-    margin-bottom: 1.875rem;
-}
 .card {
     border: 0;
     box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
@@ -251,55 +67,4 @@ body{
     background-clip: border-box;
     border: 1px solid #e6e4e9;
     border-radius: 8px;
-}
-
-.bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-}
-
-@media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-    }
-}
-
-.b-example-divider {
-    height: 3rem;
-    background-color: rgba(0, 0, 0, .1);
-    border: solid rgba(0, 0, 0, .15);
-    border-width: 1px 0;
-    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-}
-
-.b-example-vr {
-    flex-shrink: 0;
-    width: 1.5rem;
-    height: 100vh;
-}
-
-.bi {
-    vertical-align: -.125em;
-    fill: currentColor;
-}
-
-.nav-scroller {
-    position: relative;
-    z-index: 2;
-    height: 2.75rem;
-    overflow-y: hidden;
-}
-
-.nav-scroller .nav {
-    display: flex;
-    flex-wrap: nowrap;
-    padding-bottom: 1rem;
-    margin-top: -1px;
-    overflow-x: auto;
-    text-align: center;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
 }
