--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,12 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-<header class="p-3 text-bg-dark">
+<header class="p-3 bg-dark text-white">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-               <li><a href="/" class="nav-link px-2 text-secondary">Home</a> </li>
-           </ul>
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="/" class="nav-link px-2 text-secondary">Home</a></li>
+            </ul>
 
             <div class="text-end">
                 <button type="button" class="btn btn-outline-light me-2">Login</button>
@@ -19,6 +19,5 @@
         </div>
     </div>
 </header>
-
 </body>
 </html>
