--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="card card-margin search-form">
             <div class="card-body p-0">
-                <form action="/articles" method="get">
+                <form id="search-form">
                     <div class="row">
                         <div class="col-12">
                             <div class="row no-gutters">
@@ -62,14 +62,14 @@
             </div>
         </div>
     </div>
-
+   <div class="row">
     <table class="table" id="article-table">
         <thead>
         <tr>
             <th class="title col-6"><a>제목</a></th>
             <th class="hashtag col-2"><a>해시태그</a></th>
-            <th class="user-id col"><a>작성자</a></th>
-            <th class="created-at col"><a>작성일</a></th>
+            <th class="user-id"><a>작성자</a></th>
+            <th class="created-at"><a>작성일</a></th>
         </tr>
         </thead>
         <tbody class="title">
@@ -93,14 +93,24 @@
         </tr>
         </tbody>
     </table>
+   </div>
 
-    <nav id="pagination" aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-        </ul>
-    </nav>
+    <div class="row">
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <a class="btn btn-primary me-md-2" role="button" id="write-article">글쓰기</a>
+        </div>
+    </div>
+
+    <div class="row">
+        <nav id="pagination" aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </nav>
+    </div>
+
 </main>
 
 <!--<footer id="footer">-->
