--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -28,12 +28,12 @@
             <aside>
                 <p><span id="nickname">Uno</span></p>
                 <p><a id="email" href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
-                <p><time  id="created-at" datetime="2022-01-01T00:00:00">2022-01-01</time></p>
-                <p><span id="hashtag">java#</span></p>
+                <p><time id="created-at" datetime="2022-01-01T00:00:00">2022-01-01</time></p>
+                <p><span id="hashtag">#java</span></p>
             </aside>
         </section>
 
-        <article  id="article-content" class="col-md-9 col-lg-8">
+        <article id="article-content" class="col-md-9 col-lg-8">
             <pre>본문</pre>
         </article>
     </div>
@@ -47,14 +47,13 @@
         </form>
     </div>
 
-
-
     <div class="row g-5">
         <section>
-            <form class="row g-3">
+            <form class="row g-3" id="comment-form">
+                <input type="hidden" class="article-id">
                 <div class="col-md-9 col-lg-8">
                     <label for="comment-textbox" hidden>댓글</label>
-                    <textarea class="form-control" id="comment-textbox" placeholder="댓글 쓰기.." rows="3"></textarea>
+                    <textarea class="form-control" id="comment-textbox" placeholder="댓글 쓰기.." rows="3" required></textarea>
                 </div>
                 <div class="col-md-3 col-lg-4">
                     <label for="comment-submit" hidden>댓글 쓰기</label>
@@ -62,22 +61,31 @@
                 </div>
             </form>
 
-            <ul  id="article-comments" class="row col-md-10 col-lg-8 pt-3">
+            <ul id="article-comments" class="row col-md-10 col-lg-8 pt-3">
                 <li>
-                    <div class="row">
-                        <small><time>2022-01-01</time></small>
-                        <strong>Uno</strong>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-                            Lorem ipsum dolor sit amet
-                        </p>
-                    </div>
+                    <form class="comment-form">
+                        <input type="hidden" class="article-id">
+                        <div class="row">
+                            <div class="col-md-10 col-lg-9">
+                                <strong>Uno</strong>
+
+
+                                <small><time>2022-01-01</time></small>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                                    Lorem ipsum dolor sit amet
+                                </p>
+                            </div>
+                            <div class="col-2 mb-3">
+                                <button type="submit" class="btn btn-outline-danger" id="delete-comment-button">삭제</button>
+                            </div>
+                        </div>
+                    </form>
                 </li>
                 <li>
-                    <div class="row">
-                        <strong>Uno2</strong>
+                    <div>
+                        <strong>Uno</strong>
                         <small><time>2022-01-01</time></small>
-
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
                             Lorem ipsum dolor sit amet
@@ -105,13 +113,11 @@
             </ul>
         </nav>
     </div>
-
 </main>
 
 <footer id="footer">
     <hr>
-    푸터
-    <hr>
+    푸터 삽입부
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
