--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -8,19 +8,14 @@
     <title>게시판 페이지</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="/static.css/search-bar.css" rel="stylesheet">
-    <link href="/static.css/articles/table-header.css" rel="stylesheet">
+    <link href="/css/search-bar.css" rel="stylesheet">
+    <link href="/css/articles/table-header.css" rel="stylesheet">
 </head>
 
 <body>
-
-<!--<header id="header">-->
-<!-- 헤더 삽입부-->
-<!--    <hr>-->
-<!--</header>-->
 <header id="header">
     헤더 삽입부
-  <hr>
+    <hr>
 </header>
 
 <main class="container">
@@ -45,7 +40,6 @@
                                 <div class="col-lg-8 col-md-6 col-sm-12 p-0">
                                     <label for="search-value" hidden>검색어</label>
                                     <input type="text" placeholder="검색어..." class="form-control" id="search-value" name="searchValue">
-
                                 </div>
                                 <div class="col-lg-1 col-md-3 col-sm-12 p-0">
                                     <button type="submit" class="btn btn-base">
@@ -62,39 +56,39 @@
             </div>
         </div>
     </div>
-   <div class="row">
-    <table class="table" id="article-table">
-        <thead>
-        <tr>
-            <th class="title col-6"><a>제목</a></th>
-            <th class="hashtag col-2"><a>해시태그</a></th>
-            <th class="user-id"><a>작성자</a></th>
-            <th class="created-at"><a>작성일</a></th>
-        </tr>
-        </thead>
-        <tbody class="title">
-        <tr>
-            <td class="title"><a>첫글</a></td>
-            <td class="hashtag">#java</td>
-            <td class="hashtag"><span class="badge text-bg-secondary mx-1"><a class="text-reset">#java</a> </span> </td>
-            <td class="user-id">Uno</td>
-            <td class="created-at"><time>2022-01-01</time></td>
-        </tr>
-        <tr>
-            <td>두번째글</td>
-            <td>#spring</td>
-            <td>Uno</td>
-            <td><time>2022-01-02</time></td>
-        </tr>
-        <tr>
-            <td>세번째글</td>
-            <td>#java</td>
-            <td>Uno</td>
-            <td><time>2022-01-03</time></td>
-        </tr>
-        </tbody>
-    </table>
-   </div>
+
+    <div class="row">
+        <table class="table" id="article-table">
+            <thead>
+            <tr>
+                <th class="title col-6"><a>제목</a></th>
+                <th class="hashtag col-2"><a>해시태그</a></th>
+                <th class="user-id"><a>작성자</a></th>
+                <th class="created-at"><a>작성일</a></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td class="title"><a>첫글</a></td>
+                <td class="hashtag"><span class="badge text-bg-secondary mx-1"><a class="text-reset">#java</a></span></td>
+                <td class="user-id">Uno</td>
+                <td class="created-at"><time>2022-01-01</time></td>
+            </tr>
+            <tr>
+                <td>두번째글</td>
+                <td>#spring</td>
+                <td>Uno</td>
+                <td><time>2022-01-02</time></td>
+            </tr>
+            <tr>
+                <td>세번째글</td>
+                <td>#java</td>
+                <td>Uno</td>
+                <td><time>2022-01-03</time></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 
     <div class="row">
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
@@ -111,17 +105,11 @@
             </ul>
         </nav>
     </div>
-
 </main>
 
-<!--<footer id="footer">-->
-<!--    <hr>-->
-<!--    푸터 삽입부-->
-<!--</footer>-->
-
 <footer id="footer">
-    푸터
-
+    <hr>
+    푸터 삽입부
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
